[gd_scene load_steps=13 format=2]

[ext_resource path="res://Picture_Imports/Backgrounds/tree1.png" type="Texture" id=1]
[ext_resource path="res://Picture_Imports/Backgrounds/hills.png" type="Texture" id=2]
[ext_resource path="res://Picture_Imports/Backgrounds/sky.png" type="Texture" id=3]
[ext_resource path="res://Tileset/HomeScreen.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/Clouds.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/HomeScreenPlayerKnight.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/HomeSong.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/HomeScreenSkeleton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/HomeScreen.gd" type="Script" id=12]
[ext_resource path="res://Picture_Imports/Backgrounds/sun.png" type="Texture" id=13]
[ext_resource path="res://scenes/HomeMenuPlay.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 520 )

[node name="Home" type="Node2D"]
script = ExtResource( 12 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -60

[node name="Background" type="TextureRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sun" type="TextureRect" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -147.0
margin_top = 16.0
margin_right = 877.0
margin_bottom = 825.0
rect_scale = Vector2( 0.2, 0.23 )
texture = ExtResource( 13 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundTreeMountainCanvasLayer" type="CanvasLayer" parent="."]
layer = -50

[node name="Clouds" parent="BackgroundTreeMountainCanvasLayer" instance=ExtResource( 5 )]

[node name="Mountain" type="TextureRect" parent="BackgroundTreeMountainCanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = 21.0
margin_right = 15.0
margin_bottom = 21.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree" type="TextureRect" parent="BackgroundTreeMountainCanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 208.0
margin_top = -322.0
margin_right = 1232.0
margin_bottom = 278.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree2" type="TextureRect" parent="BackgroundTreeMountainCanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 101.0
margin_top = -314.0
margin_right = 1125.0
margin_bottom = 286.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree3" type="TextureRect" parent="BackgroundTreeMountainCanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 302.0
margin_top = -303.0
margin_right = 1326.0
margin_bottom = 297.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree5" type="TextureRect" parent="BackgroundTreeMountainCanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 826.0
margin_top = -344.0
margin_right = 1850.0
margin_bottom = 256.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree7" type="TextureRect" parent="BackgroundTreeMountainCanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -14.0
margin_top = 289.0
margin_right = -14.0
margin_bottom = 289.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreesSecondLayerCanvasLayer3" type="CanvasLayer" parent="."]
layer = -30

[node name="Tree8" type="TextureRect" parent="TreesSecondLayerCanvasLayer3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -338.0
margin_top = -301.0
margin_right = 686.0
margin_bottom = 299.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree9" type="TextureRect" parent="TreesSecondLayerCanvasLayer3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -231.0
margin_top = -304.0
margin_right = 793.0
margin_bottom = 296.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tree10" type="TextureRect" parent="TreesSecondLayerCanvasLayer3"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -127.0
margin_top = -326.0
margin_right = 897.0
margin_bottom = 274.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer4" type="CanvasLayer" parent="."]
layer = -30

[node name="TileMap" type="TileMap" parent="CanvasLayer4"]
position = Vector2( -63, -8 )
tile_set = ExtResource( 4 )
collision_layer = 8
collision_mask = 3
format = 1
tile_data = PoolIntArray( 524289, 14, 0, 524291, 14, 0, 524293, 14, 0, 524295, 21, 0, 524297, 21, 0, 524299, 21, 0, 524301, 21, 0, 524303, 21, 0, 524305, 21, 0, 524307, 14, 0, 524309, 14, 0, 524311, 14, 0, 524313, 14, 0, 524315, 14, 0, 524317, 14, 0, 524319, 14, 0, 524321, 14, 0, 524323, 14, 0, 524325, 14, 0, 524327, 14, 0, 524329, 14, 0, 524331, 14, 0, 524333, 14, 0, 524335, 14, 0, 524337, 14, 0, 524339, 14, 0, 524341, 14, 0, 524343, 14, 0, 524345, 14, 0, 524347, 14, 0, 524349, 14, 0, 524351, 14, 0, 524353, 14, 0, 524355, 14, 0, 524357, 14, 0 )

[node name="HomeMenuPlay" parent="." instance=ExtResource( 14 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 519, 486 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -2, 496 )
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 1034, 496 )
shape = SubResource( 1 )

[node name="HomeSkeleton2" parent="." instance=ExtResource( 9 )]
position = Vector2( 945, 458 )

[node name="HomeSkeleton3" parent="." instance=ExtResource( 9 )]
position = Vector2( 132, 464 )

[node name="LeftPositionSpawn" type="Position2D" parent="."]
position = Vector2( 81, 479 )

[node name="RightPositionSpawn" type="Position2D" parent="."]
position = Vector2( 995, 482 )

[node name="TimerToSpawn" type="Timer" parent="."]
wait_time = 5.0
[connection signal="timeout" from="TimerToSpawn" to="." method="_on_TimerToSpawn_timeout"]

[editable path="Player"]

[editable path="Player/HealthBar"]
